[tool.poetry]
name = "tracker"
version = "2.1.8"
description = ""
authors = ["Masum Billal <proafxin@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi-myhelper = "^0.1.7"
fastapi = { extras = ["all"], version = "^0.103.0" }
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlalchemy = "^2.0.20"
mysqlclient = "^2.2.0"
pymysql = "^1.1.0"
alembic = "^1.11.3"
aiomysql = "^0.2.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
pytest-asyncio = "^0.21.1"
gevent = "^23.9.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
